# voice-sandwich-demo

./: eslint.config.mjs  frontend_architecture.txt  notes.txt  pnpm-lock.yaml
components/python/: pyproject.toml  requirements.txt  whisper_pytorch.py
components/python/src/: events.py  kokoro_tts.py  main.py  models.py  test.py  vibevoice_tts.py  whisper_pytorch.py  whisper_stt.py
components/web/src/lib/: websocket.ts
python/: pyproject.toml
python/src/: voice_agent.py
