[project]
name = "python-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain",
    "langchain-anthropic>=1.2.0",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.4",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "python-dotenv",
    "rich>=14.2.0",
    "spacy>=3.8.11",
    "uvicorn>=0.38.0",
    "websockets",
]

[project.optional-dependencies]
assemblyai = ["assemblyai"]
elevenlabs = ["elevenlabs"]
anthropic = ["langchain-anthropic"]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
